--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -48,8 +48,10 @@ jobs:
     - name: Install dependencies
       run: |
         C:\Miniconda\condabin\conda.bat env update --file environment.yml --name base
+        C:\Miniconda\condabin\conda.bat init powershell
     - name: Lint with flake8
       run: |
+        C:\Miniconda\condabin\conda.bat activate base
         C:\Miniconda\condabin\conda.bat install flake8
         # stop the build if there are Python syntax errors or undefined names
         python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -58,5 +60,6 @@ jobs:
         python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
+        C:\Miniconda\condabin\conda.bat activate base
         C:\Miniconda\bin\conda.bat install pytest
         pytest
