--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -61,5 +61,5 @@ jobs:
     - name: Test with pytest
       run: |
         C:\Miniconda\condabin\conda.bat activate base
-        C:\Miniconda\bin\conda.bat install pytest
+        C:\Miniconda\condabin\conda.bat install pytest
         pytest
