--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -3,8 +3,8 @@ name: Python package
 on: [push, pull_request]
 
 jobs:
-  build-linux:
-    runs-on: [ubuntu-latest, windows-latest]
+  build:
+    runs-on: windows-latest
     strategy:
       max-parallel: 5
       matrix:
