--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -18,7 +18,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Set up Conda
       run: |
-        if [ "${{ matrix.os }}" != "windows-latest" ]; then
+        echo ${{ matrix.os }}
+        if [ "{{ matrix.os }}" != "windows-latest" ]; then
             echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
           else
             echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
