--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -16,14 +16,16 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Debug
+      run: echo "${{ matrix.os }}"
     - name: Set up Conda (Windows)
       run: echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
       shell: bash
-      if: matrix.os == 'windows-latest'
+      if: matrix.os == windows-latest
     - name: Set up Conda (Linux)
       run: echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
       shell: bash
-      if: matrix.os != 'windows-latest'
+      if: matrix.os != windows-latest
     - name: Install dependencies
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
