--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,20 +17,20 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Debug
-      run: echo "::debug::${{ matrix.os }}"
-    - name: Set up Conda (Windows)
-      if: matrix.os == 'windows-latest'
-      run: echo "::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat"
-        
-    - name: Set up Conda (Linux)
-      if: matrix.os != 'windows-latest'
-      run: echo "::set-env name=CONDA_EXEC::${CONDA}/bin/conda"
+    - name: Set-up conda
+        run:   |
+          if [ "${{ matrix.os }}" != "windows-latest" ]; then
+            echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
+          else
+            echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
+          fi
+        shell: bash
     - name: Install dependencies
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA_EXEC env update --file environment.yml --name base
-        $CONDA_EXEC init powershell
+        $CONDA_EXEC init bash
+      shell: bash
     - name: Lint with flake8
       run: |
         $CONDA_EXEC activate base
@@ -39,13 +39,13 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      shell: powershell 
+      shell: bash
     - name: Test with pytest
       run: |
         $CONDA_EXEC activate base
         $CONDA_EXEC install pytest
         pytest
-      shell: powershell 
+      shell: bash 
 
         #  build-windows:
         #    runs-on: windows-latest
