--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,15 +17,15 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set-up conda
+    - name: Set up conda
         shell: bash
         run: |
-          if [ "${{ matrix.os }}" != "windows-latest" ] 
-          then
-            echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
-          else
-            echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
-          fi
+        # if [ "${{ matrix.os }}" != "windows-latest" ] 
+        # then
+        #   echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
+        # else
+        #   echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
+        # fi
     - name: Install dependencies
       shell: bash
       run: |
