--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Set up conda
-        shell: bash
-        run: |
-        # if [ "${{ matrix.os }}" != "windows-latest" ] 
-        # then
-        #   echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
-        # else
-        #   echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
-        # fi
+      shell: bash
+      run: |
+        if [ "${{ matrix.os }}" != "windows-latest" ] 
+        then
+          echo '::set-env name=CONDA_EXEC::${CONDA}/bin/conda'
+        else
+          echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
+        fi
     - name: Install dependencies
       shell: bash
       run: |
