--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -37,6 +37,8 @@ jobs:
     - name: Lint with flake8
       shell: bash
       run: |
+        # Alternative to restarting shell https://github.com/conda/conda/issues/7980#issuecomment-492784093
+        eval "$(conda shell.bash hook)"
         $CONDA_EXEC activate base
         $CONDA_EXEC install flake8
         # stop the build if there are Python syntax errors or undefined names
