--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -31,27 +31,22 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         $CONDA_EXEC env update --file environment.yml --name base
-        $CONDA_EXEC init bash
         # Add conda info to the path
         source ~/.bashrc 
     - name: Lint with flake8
       shell: bash
       run: |
         # Alternative to restarting shell https://github.com/conda/conda/issues/7980#issuecomment-492784093
-        $CONDA_EXEC init bash
-        eval "$(conda shell.bash hook)"
-        $CONDA_EXEC activate base
         $CONDA_EXEC install flake8
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       shell: bash 
       run: |
-        $CONDA_EXEC activate base
         $CONDA_EXEC install pytest
-        pytest
+        python -m pytest
 
         #  build-windows:
         #    runs-on: windows-latest
