--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -1,80 +1,31 @@
-name: Python package
+name: Python Package using Anaconda
 
-on: [push, pull_request]
+on: [push]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
+  build-linux:
+    runs-on: ubuntu-latest
     strategy:
       max-parallel: 5
-      matrix:
-        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
-        os: [windows-latest, ubuntu-latest]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    - name: Set up conda
-      shell: bash
-      run: |
-        if [ "${{ matrix.os }}" != "windows-latest" ] 
-        then
-          echo "::set-env name=CONDA_EXEC::${CONDA}/bin/conda"
-        else
-          echo '::set-env name=CONDA_EXEC::C:\Miniconda\condabin\conda.bat'
-        fi
+        python-version: 3.8
     - name: Install dependencies
-      shell: bash
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
-        $CONDA_EXEC env update --file environment.yml --name base
-        # Add conda info to the path
-        source ~/.bashrc 
+        $CONDA/bin/conda env update --file environment.yml --name base
     - name: Lint with flake8
-      shell: bash
       run: |
-        # Alternative to restarting shell https://github.com/conda/conda/issues/7980#issuecomment-492784093
-        $CONDA_EXEC install flake8
+        $CONDA/bin/conda install flake8
         # stop the build if there are Python syntax errors or undefined names
-        python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        $CONDA/bin/flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        $CONDA/bin/flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      shell: bash 
       run: |
-        $CONDA_EXEC install pytest
-        python -m pytest
-
-        #  build-windows:
-        #    runs-on: windows-latest
-        #    strategy:
-        #      max-parallel: 5
-        #      matrix:
-        #        python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
-        #
-        #    steps:
-        #    - uses: actions/checkout@v1
-        #    - name: Set up Python ${{ matrix.python-version }}
-        #      uses: actions/setup-python@v1
-        #      with:
-        #        python-version: ${{ matrix.python-version }}
-        #    - name: Install dependencies
-        #      run: |
-        #        C:\Miniconda\condabin\conda.bat env update --file environment.yml --name base
-        #        C:\Miniconda\condabin\conda.bat init powershell
-        #    - name: Lint with flake8
-        #      run: |
-        #        C:\Miniconda\condabin\conda.bat activate base
-        #        C:\Miniconda\condabin\conda.bat install flake8
-        #        # stop the build if there are Python syntax errors or undefined names
-        #        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        #        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        #        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-        #    - name: Test with pytest
-        #      run: |
-        #        C:\Miniconda\condabin\conda.bat activate base
-        #        C:\Miniconda\condabin\conda.bat install pytest
-        #        pytest
+        conda install pytest
+        $CONDA/bin/pytest
