--- a/.github/workflows/miniconda.yml
+++ b/.github/workflows/miniconda.yml
@@ -16,15 +16,18 @@ jobs:
       - name: Install dependencies
         shell: bash
         run: |
-            conda env update --file environment.yml --name base
+            conda create --name miniconda-test
+            conda env update --file environment.yml --name miniconda-test
       - name: Lint
         shell: bash
         run: |
+            conda activate-miniconda-test
             conda install flake8
             python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
             python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run pytest
         shell: bash
         run: |
+            conda activate-miniconda-test
             conda install pytest
             pytest
