--- a/.github/workflows/miniconda.yml
+++ b/.github/workflows/miniconda.yml
@@ -1,33 +1,32 @@
 on: [push]
 
 jobs:
-  example-1:
-    name: Ex1 (${{ matrix.python-version }}, ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
+  miniconda:
+    name: Miniconda ${{ matrix.os }})
+    runs-on: ${{ matrix.os }})
     strategy:
-      fail-fast: false
-      matrix:
-        os: ["ubuntu-latest", "windows-latest"]
+        matrix:
+            os: ["ubuntu-latest", "windows-latest"]
     steps:
+      - uses: actions/checkout@v2
       - uses: goanpeca/setup-miniconda@v1
         with:
-          auto-update-conda: true
+          activate-environment: test
+          environment-file: environment.yml
           python-version: 3.8
-      - name: Install dependencies
-        shell: bash
+          auto-activate-base: false
+      - shell: bash -l {0}
         run: |
-            conda create --name miniconda-test
-            conda env update --file environment.yml --name miniconda-test
+          conda info
+          conda list
       - name: Lint
         shell: bash
         run: |
-            conda activate-miniconda-test
             conda install flake8
             python -m flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
             python -m flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Run pytest
         shell: bash
         run: |
-            conda activate-miniconda-test
             conda install pytest
             pytest
