--- a/.github/workflows/miniconda.yml
+++ b/.github/workflows/miniconda.yml
@@ -7,13 +7,14 @@ jobs:
     strategy:
         matrix:
             os: ["ubuntu-latest", "windows-latest"]
+            python-version: ["3.6", "3.7", "3.8"]
     steps:
       - uses: actions/checkout@v2
       - uses: goanpeca/setup-miniconda@v1
         with:
           activate-environment: test
           environment-file: environment.yml
-          python-version: 3.8
+          python-version: ${{ matrix.python-version }}
           auto-activate-base: false
       - shell: bash -l {0}
         run: |
